# test_org

./: CMakeLists.txt  README.md  setup.cfg
.github/: tag_and_release.yaml
.github/workflows/: format_python.yaml  pip_release_tmpl.yaml  pypi_release_tmpl.yaml  tag_and_release.yaml  tag_and_release_master.yaml  tag_tmpl.yaml  test_pypi _release.yaml
.github/workspaces/: tag_and_release_master.yaml
install/lib/cminx/cmake/: cminx-config-version.cmake  cminx-config.cmake
src/CMinx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
test_org/: my_python_file.py
